--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+passlib==1.6.5
+PyMySQL==0.6.6
 Werkzeug==0.10.4
 wheel==0.24.0
+WTForms==2.0.2
